versioned_docs/version-1.5/cloud/personal-access-tokens.mdx
---
title: Personal Access Tokens
description: Use Personal Access Tokens to Interact with the Okteto API
sidebar_label: Personal Access Tokens
id: personal-access-tokens
---

import Image from "@theme/Image";

You can use Personal Access Tokens instead of OAuth to authenticate with Okteto.

Personal Access Tokens are useful when scripting, or when configuring [Preview Environments](cloud/preview-environments/overview.mdx).

### Creating a Personal Access Token

1. Sign in to your Okteto account.
1. Click on the **settings** icon on the left tab.
1. Click on the **New Token** button.
   <p align="center">
     <Image
       src={require("@site/static/img/tokens-new.png").default}
       alt="new token"
       width="850"
     />
   </p>
1. Give your token a descriptive name and click the **Generate** button.
   <p align="center">
     <Image
       src={require("@site/static/img/tokens-name.png").default}
       alt="token name"
       width="630"
     />
   </p>
1. Copy the token to your clipboard. For security reasons, after you navigate off the page, you will not see the token again.
   <p align="center">
     <Image
       src={require("@site/static/img/tokens-copy.png").default}
       alt="copy token to clipboard"
       width="630"
     />
   </p>

> Warning: Treat your tokens like passwords and keep them secret. Always use tokens as environment variables instead of hardcoding them into your programs.

## Using a Token on the Command Line

Once you have a token, you can use it to authenticate with the [Okteto CLI](reference/cli.mdx) instead of using your browser, as shown below:

```console
$ okteto context use https://cloud.okteto.com --token $YOUR_TOKEN
```

Personal Access Tokens can also be used when setting the `OKTETO_TOKEN` environment variable.

```console
$ export OKTETO_TOKEN=xxxxxxx
$ okteto namespace create test-cindylopez
```

### Revoking a Personal Access Token

1. Sign in to your Okteto account.
1. Click on the **settings** icon on the left tab.
1. Click on the **Delete** button.
   <p align="center">
     <Image
       src={require("@site/static/img/tokens-delete.png").default}
       alt="delete a token"
       width="850"
     />
   </p>
1. Click on the **Delete Token** button to confirm that you want to delete your token.
   <p align="center">
     <Image
       src={require("@site/static/img/tokens-delete-confirm.png").default}
       alt="confirm token deletion"
       width="478"
     />
   </p>

Once deleted, the token is automatically revoked, and it can't be recovered.
